# ModCDP

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO_layout.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
client/python/: README.md  demo.py  pyproject.toml
client/python/modcdp/: BBBrowserExtensionInjector.py  BorrowedExtensionInjector.py  (+19 more)
python/: README.md  pyproject.toml
python/examples/: demo.py
python/modcdp/: __init__.py
python/tests/: test_AutoSessionRouter.py  test_BBBrowserExtensionInjector.py  test_BBBrowserLauncher.py  test_BBExtensionInjector.py  test_BorrowedExtensionInjector.py  test_BrowserLauncher.py  test_BrowserbaseBrowserLauncher.py  test_CDPExtensionInjector.py  test_CDPTypes_payload_schema_normalization.py  test_CLIExtensionInjector.py  test_DiscoverExtensionInjector.py  test_DiscoveredExtensionInjector.py  test_ExtensionInjector.py  test_ExtensionsLoadUnpackedInjector.py  test_LocalBrowserLaunchExtensionInjector.py  test_LocalBrowserLauncher.py  test_ModCDPClient.py  test_ModCDPClientCustomFlatNamespace.py  test_ModCDPClientRoutedDefaultOverrides.py  test_ModCDPClientTypedEventInference.py  test_ModCDPClient_protocol_validation.py  test_ModCDPPayloadSchemaNormalization.py  test_NativeMessagingUpstreamTransport.py  test_NatsUpstreamTransport.py  test_NoneBrowserLauncher.py  test_NoopBrowserLauncher.py  test_PipeUpstreamTransport.py  test_RemoteBrowserLauncher.py  test_ReverseWebSocketUpstreamTransport.py  test_UpstreamTransport.py  test_WSUpstreamTransport.py  test_WebSocketUpstreamTransport.py  test_translate.py
(+450 files in other folders)
